--- a/index2.html
+++ b/index2.html
@@ -210,7 +210,8 @@ function acepto(){
 }
 
 
-// CORAZONES GENERALES
+
+// CORAZONES GENERALES xd
 setInterval(()=>crearCorazon(),400);
 
 function crearCorazon(){
