--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ function acepto(){
 
 
 
-// CORAZONES GENERALES xd
+// CORAZONES GENERALES xdxd
 setInterval(()=>crearCorazon(),400);
 
 function crearCorazon(){
